{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 9,
  "lineage": "ffb7a1fb-fc6b-3edf-7cc8-bf75d9a24726",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "accesos_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900787313576:security-group/sg-03407530",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03407530",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "trafico http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "900787313576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Acceso web"
            },
            "tags_all": {
              "Name": "Acceso web"
            },
            "vpc_id": "vpc-4471b939"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900787313576:security-group/sg-03407530",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "self ref",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-03407530",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "self ref",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "900787313576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Acceso web"
            },
            "tags_all": {
              "Name": "Acceso web"
            },
            "vpc_id": "vpc-4471b939"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900787313576:vpc/vpc-4471b939",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-3f81b242",
            "default_route_table_id": "rtb-cafea9b4",
            "default_security_group_id": "sg-03407530",
            "dhcp_options_id": "dopt-44e3963e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4471b939",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-cafea9b4",
            "owner_id": "900787313576",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    }
  ]
}